@@ -106,6 +106,9 @@ Version 1.6.7
        in a branch/tag/copy operation. (Stefan)
 - BUG: Text files dragged from the repository browser to the explorer
        got truncated if they had the svn:eol-style property set. (Stefan)
+- BUG: Resizing the dialogs with right/middle click didn't respect
+       the current monitor but always moved the dialogs to the 
+       primary monitor. (Stefan)
 
 Version 1.6.6
 - CHG: Reduced disk access in the status cache. (Stefan)
